--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    font-family: "メイリオ";
+    background-color: #f0f8ff;
+}
+
+#name {
+    width: "100";
+    text-align: center;
+}
+
+#msg {
+    word-break: break-all;
+}
+
+form {
+  padding-top: 50px;
+}
+
+label {
+    color: #0000cd;
+}
