--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,22 +1,36 @@
-<div class="panel panel-default">
+<div class="panel panel-primary">
   <div class="panel-heading">
     メッセージ一覧
   </div>
-    
-  <div class="panel-body">
-    <% @messages.each do |message| %>
-      <span class="label label-info"><%= message.name %></span>
-      <%= message.body %>
-      <br>
-    <% end %>
-  </div>
+  
+  <table class="table">
+    <tbody>
+      <% @messages.each do |message| %>
+        <tr>
+          <td id="name"><span class="label label-primary"><%= message.name %></span></td>
+          <td id="msg"><%= message.body %></td>
+        </tr>
+      <% end %>
+		</tbody>
+	</table>
 </div>
 
-<%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+<%= form_for(@message, html: {class: "form-horizontal"} ) do |f| %>
+  <div class="form-group">
+    <label class="col-sm-1 control-label"><nobr>名前:</nobr></label>
+    <div class="col-sm-10">
+      <%= f.text_field :name , class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-1 control-label"><nobr>内容:</nobr></label>
+    <div class="col-sm-10">
+      <%= f.text_area :body , class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-1 col-sm-10">
+      <%= f.submit class: "btn btn-sm btn-primary" %>
+    </div>
+  </div>  
 <% end %>
