--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -17,13 +17,13 @@
 
 <%= form_for(@message, html: {class: "form-horizontal"} ) do |f| %>
   <div class="form-group">
-    <label class="col-sm-1 control-label"><nobr>名前:</nobr></label>
+    <label class="col-sm-1 control-label">名前:</label>
     <div class="col-sm-10">
       <%= f.text_field :name , class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-1 control-label"><nobr>内容:</nobr></label>
+    <label class="col-sm-1 control-label">内容:</label>
     <div class="col-sm-10">
       <%= f.text_area :body , class: "form-control" %>
     </div>
