--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,33 +15,5 @@
 	</table>
 </div>
 
-<%= form_for(@message, html: {class: "form-horizontal"} ) do |f| %>
-  <% if @message.errors.present? %>
-    <div class="alert alert-danger">
-      <%= alert %>
-      <ul>
-        <% @message.errors.full_messages.each do |full_message| %>
-          <li><%= full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <label class="col-sm-1 control-label">名前:</label>
-    <div class="col-sm-10">
-      <%= f.text_field :name , class: "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="col-sm-1 control-label">内容:</label>
-    <div class="col-sm-10">
-      <%= f.text_area :body , class: "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
-      <%= f.submit class: "btn btn-sm btn-primary" %>
-    </div>
-  </div>  
-<% end %>
+<% #部分テンプレートを読み込んでいる %>
+<%= render 'form' %>
