--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,6 +9,8 @@
         <tr>
           <td id="name"><span class="label label-primary"><%= message.name %></span></td>
           <td id="msg"><%= message.body %></td>
+          <td>(<%= link_to "edit" , edit_message_path(message) %>
+          <%= link_to "destroy" , message , method: :delete, data: { confirm:'削除してもよろしいですか？' } %>)</td>
         </tr>
       <% end %>
 		</tbody>
