--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -22,6 +22,12 @@
     </div>
   </div>
   <div class="form-group">
+    <label class="col-sm-1 control-label">年齢:</label>
+    <div class="col-sm-10">
+      <%= f.text_field :age , class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-1 col-sm-10">
       <%= f.submit class: "btn btn-sm btn-primary" %>
     </div>
